# clawbizarre

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PITCH.md  README.md  agent-economics-playbook.md  architecture.md  compute-credit-design.md  deploy.sh  design-document-v3.md  docker-compose.yml  morning-brief-2026-02-21.md  positioning.md  pyproject.toml
acp-deploy/: DEPLOY.md  fly.toml  handlers.ts
clawbizarre/: __init__.py  cli.py
docs/: acp-evaluator-bridge.md  acp-offering-design.md  adoption-playbook.md  agentic-sla.md  auto-test-generation-design.md  competitive-landscape.md  competitive-positioning.md  decision-brief-v1.md  defensibility-analysis.md  deployment-plan.md  design-document-v1.md  design-document-v2.md  design-document-v3.md  draft-vrf-scitt-00.md  executive-summary.md  first-week-playbook.md  framework-integrations.md  framework-tutorial.md  landscape-feb-2026-v2.md  landscape-feb-2026-v3.md  landscape-feb-2026.md  lifecycle-walkthrough.md  matching-engine-design.md  mcp-server-design.md  mechanism-design-parallel-challenge.md  nccoe-feedback-draft-v1.md  nist-rfi-draft-v3.md  protocol-club-challenge-1.md  quickstart.md  research-notes-market-microstructure.md  research-notes-spot-pricing.md  scitt-alignment.md  self-hosting-design.md  trust-stack-taxonomy.md  verification-protocol-v1.md  vrf-spec-v1.md  x402-integration-design.md
github-action/: README.md  action.yml
prototype/: Dockerfile  _e2e_test.py  a2a_adapter.py  acp_bridge.py  acp_evaluator.py  acp_evaluator_live.py  acp_provider_example.py  aggregator.py  api_server.py  api_server_v2.py  api_server_v3.py  api_server_v4.py  (+67 more)
(+7 files in other folders)
